--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://lampk.github.io/course_Epidemiology"
+baseurl = "https://lampk.github.io/"
 title = "Dịch tễ học ứng dụng"
 languageCode = "en-us"
 
