--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
-baseurl = "https://lampk.github.io/course_Epidemiology"
+baseurl = "https://lampk.github.io/course_Epidemiology/"
 title = "Dịch tễ học ứng dụng"
 languageCode = "en-us"
+publishDir = "docs"
 
 # Theme to use
 theme = "simple-hugo-theme"
@@ -30,15 +31,15 @@ pygmentsStyle = "vs"
 [menu]
   # Header
   [[menu.main]]
-    url = "/about/"
+    url = "about/"
     name = "Giới thiệu"
     weight = 1
   [[menu.main]]
-    url = "/agenda/"
+    url = "agenda/"
     name = "Chương trình"
     weight = 2
   [[menu.main]]
-    url = "/presentation/"
+    url = "presentation/"
     name = "Bài giảng"
     weight = 3
 
